--- a/app/views/my_news_items/new.html.haml
+++ b/app/views/my_news_items/new.html.haml
@@ -1,12 +1,15 @@
 .row.mt-2
     .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
-        %h1.text-center Edit news article
+        %h1.text-center Create news article
 
     .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
         = render 'form', news_item: @news_item,
         form_url: representative_new_my_news_item_path(@representative),
         form_method: :post,
-        representatives_list: @representatives_list
+        representatives_list: @representatives_list,
+        ratings_list: @ratings_list,
+        issue_list: @issue_list,
+        the_owner: @curr_user
     .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
         .clearfix.mt-3
             .float-right
