--- a/app/views/news_items/index.html.haml
+++ b/app/views/news_items/index.html.haml
@@ -18,6 +18,8 @@
                             %th #
                             %th Name
                             %th Description
+                            %th Issue
+                            %th Rating
                             %th Posted
                             %th{ colspan: 3 } Links
                     %tbody
@@ -30,17 +32,28 @@
                                         &nbsp;
                                         %i.fas.fa-external-link-alt
                                 %td= item.description
+                                %td= item.issue
+                                %td= item.rating
                                 %td
                                     %time.timeago{ datetime: item.created_at.iso8601 }
                                 %td
                                     = link_to representative_news_item_path(item.representative.id, item.id),
                                     class: 'btn btn-info' do
                                         %i.fas.fa-eye &nbsp;Info
-                                %td
-                                    = link_to representative_edit_my_news_item_path(item.representative.id, item.id),
-                                    class: 'btn btn-success' do
-                                        %i.fas.fa-pen &nbsp;Edit
-                                %td
-                                    = link_to representative_news_item_path(item.representative.id, item.id),
-                                    method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' do
-                                        %i.fas.fa-trash &nbsp;Delete
+                                - if item.owner.eql? session[:current_user_id].to_s
+                                    %td
+                                        = link_to representative_edit_my_news_item_path(item.representative.id,
+                                        item.id), class: 'btn btn-success' do
+                                            %i.fas.fa-pen &nbsp;Edit
+                                    %td
+                                        = link_to representative_delete_my_news_item_path(item.representative.id,
+                                        item.id),
+                                         controller: :my_news_items, action: 'delete', method: 'post',
+                                        class: 'btn btn-danger' do
+                                            %i.fas.fa-pen &nbsp;Delete
+                                - else
+                                    %td
+                                        = link_to representative_rate_my_news_item_path(item.representative.id,
+                                        item.id), class: 'btn btn-dark' do
+                                            %i.fas.fa-pen &nbsp;Rate
+                                    %td
