--- a/app/views/news_items/show.html.haml
+++ b/app/views/news_items/show.html.haml
@@ -13,6 +13,18 @@
                     %dt.col-sm-9
                         = @news_item.description
                 %dl.row
+                    %dt.col-sm-3.text-md-right Issue:
+                    %dt.col-sm-9
+                        = @news_item.issue
+                %dl.row
+                    %dt.col-sm-3.text-md-right Owner_uid:
+                    %dt.col-sm-9
+                        = @news_item.owner
+                %dl.row
+                    %dt.col-sm-3.text-md-right Rating:
+                    %dt.col-sm-9
+                        = @news_item.rating
+                %dl.row
                     %dt.col-sm-3.text-md-right Representative:
                     %dt.col-sm-9
                         %a{ href: representative_path(@representative) }
@@ -28,10 +40,16 @@
     .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
         .clearfix
             .float-right
-                = link_to representative_edit_my_news_item_path(@representative, @news_item),
-                 class: 'mx-1 btn btn-primary' do
-                    %i.fas.fa-pencil
-                    Edit
+                - if @news_item.owner.eql? session[:current_user_id].to_s
+                    = link_to representative_edit_my_news_item_path(@representative, @news_item),
+                     class: 'mx-1 btn btn-primary' do
+                        %i.fas.fa-pencil
+                        Edit
+                - else
+                    = link_to representative_rate_my_news_item_path(@representative, @news_item),
+                     class: 'mx-1 btn btn-primary' do
+                        %i.fas.fa-pencil
+                        Rate
 
                 = link_to representative_news_items_path(@representative),
                  class: 'mx-1 btn btn-info' do
